--- a/html/main.html
+++ b/html/main.html
@@ -19,6 +19,7 @@
         <title>Spax's Site</title>
     </head>
     <body>
+        <canvas id="snow"></canvas>
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
