--- a/html/main.html
+++ b/html/main.html
@@ -19,6 +19,11 @@
         <title>Spax's Site</title>
     </head>
     <body>
+        <canvas id="snow" style="
+width:100%;
+height:100%;
+position: absolute;
+  z-index: 1;"></canvas>
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
