--- a/html/main.html
+++ b/html/main.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script src="/js/bootstrap.min.js"></script>
         <!---->
+        <script src="/js/Snowfall.JS"> </script>
         <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/main"/>
         <title>Spax's Site</title>
