--- a/html/main.html
+++ b/html/main.html
@@ -154,5 +154,6 @@ position: absolute;
             });
         </script>-->
         <script src="/js/scrollparallax.js"></script>
+        <script src="/js/Snowfall.JS"> </script>
     </body>
 </html>
