--- a/html/main.html
+++ b/html/main.html
@@ -22,7 +22,7 @@
     <body>
         <canvas id="snow" style="
 width:100%;
-height:100%;
+height:100vh;
 position: absolute;
   z-index: 1;"></canvas>
         <div id="bg">
