--- a/html/main.html
+++ b/html/main.html
@@ -23,7 +23,7 @@
         <canvas id="snow" style="
 width:100%;
 height:100vh;
-position: absolute;
+position: fixed;
   z-index: 1;"></canvas>
         <div id="bg">
             <div class="text-box flex-container unselectable">
