--- a/html/main.html
+++ b/html/main.html
@@ -22,6 +22,7 @@
     <body>
         <canvas id="snow" style="
 position: fixed;
+pointer-events: none;
 z-index: 1;"></canvas>
         <div id="bg">
             <div class="text-box flex-container unselectable">
