--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -19,11 +19,7 @@
     </head>
     <body>
         <div id="bg">
-            <iframe
-                allowfullscreen allow="geolocation; microphone; camera"
-                src="https://snap.berkeley.edu/embed?project=Mojo%20Arrow%20Advice%E2%84%A2&user=daveyyyyyyy"
-                width="720" height="540" frameBorder=0>
-            </iframe>
+            <iframe width="480" height="390" frameBorder=0 allowfullscreen src="https://snap.berkeley.edu/embed?projectname=Mojo%20Arrow%20Advice%E2%84%A2&username=daveyyyyyyy&showTitle=false&showAuthor=false&pauseButton=true"></iframe>
             <div class="text-box flex-container unselectable">
                     <div>
                         Controls:<br>
