changed the embed dimensions

--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="bg">
-            <iframe width="480" height="390" frameBorder=0 allowfullscreen src="https://snap.berkeley.edu/embed?projectname=Mojo%20Arrow%20Advice%E2%84%A2&username=daveyyyyyyy&showTitle=false&showAuthor=false&pauseButton=true"></iframe>
+            <iframe width="720" height="540" frameBorder=0 src="https://snap.berkeley.edu/embed?projectname=Mojo%20Arrow%20Advice%E2%84%A2&username=daveyyyyyyy&showTitle=false&showAuthor=false&pauseButton=true"></iframe>
             <div class="text-box flex-container unselectable">
                     <div>
                         Controls:<br>
