--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="bg">
-            <iframe width="720" height="540" frameBorder=0 src="https://snap.berkeley.edu/embed?projectname=Mojo%20Arrow%20Advice%E2%84%A2&username=daveyyyyyyy&pauseButton=true"></iframe>
+            <iframe class="snap" width="720" height="540" frameBorder=0 src="https://snap.berkeley.edu/embed?projectname=Mojo%20Arrow%20Advice%E2%84%A2&username=daveyyyyyyy&pauseButton=true"></iframe>
             <div class="text-box flex-container unselectable">
                     <div>
                         Controls:<br>
@@ -34,5 +34,14 @@
                 </div>
             </div>
         <script src="/js/scrollparallax.js" type=text/javascript></script>
+        <script>
+            const frame = document.getElementById('snap');
+            frame.contentWindow.postMessage('*', 'https://snap.berkeley.edu');
+            window.addEventListener('message', event => {
+                if (event.origin === 'https://spiritaxolotl.github.io') {
+                    console.log(event.data);
+                }
+            });
+        </script>
     </body>
 </html>
