--- a/html/devtimezones.html
+++ b/html/devtimezones.html
@@ -20,13 +20,13 @@
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
-                <div id="date1"></div>
+                <div class="date"></div>
             </div>
             <div class="text-box flex-container unselectable">
-                <div id="date2"></div>
+                <div class="date"></div>
             </div>
             <div class="text-box flex-container unselectable">
-                <div id="date3"></div>
+                <div class="date"></div>
             </div>
             <!--<div class="text-box flex-container unselectable">
                 <div id="date4"></div>
