--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -8,6 +8,14 @@
       id="glitch-shader"
       width="100%"
       height="100%"
+      style="
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      "
     ></canvas>
     <script async type="module">
       import { SimpleShader as Shader } from "/js/simple-shader.js";
