--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -6,17 +6,20 @@
   <body style="background-color: black;">
     <canvas
       id="glitch-shader"
-      width="100%"
-      height="100%"
       style="
         width: 100%;
         height: 100%;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
       "
     ></canvas>
+    <script>
+      const canvas = document.getElementById("glitch-shader");
+      const width = canvas.clientWidth;
+      const height = canvas.clientHeight;
+      if (canvas.width !== width || canvas.height !== height) {
+        canvas.width = width;
+        canvas.height = height;
+      }
+    </script>
     <script async type="module">
       import { SimpleShader as Shader } from "/js/simple-shader.js";
       import * as frags from "/tests/frags.glsl.js";
