--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -3,23 +3,16 @@
   <head>
     <title>Glitch Shader</title>
   </head>
-  <body style="background-color: black;">
+  <body style="background-color: black; overscroll-behavior: none;">
     <canvas
       id="glitch-shader"
+      width="1440"
+      height="900"
       style="
         width: 100%;
         height: 100%;
       "
     ></canvas>
-    <script>
-      const canvas = document.getElementById("glitch-shader");
-      const width = canvas.clientWidth;
-      const height = canvas.clientHeight;
-      if (canvas.width !== width || canvas.height !== height) {
-        canvas.width = width;
-        canvas.height = height;
-      }
-    </script>
     <script async type="module">
       import { SimpleShader as Shader } from "/js/simple-shader.js";
       import * as frags from "/tests/frags.glsl.js";
