forgot default width/height of the canvas

--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <canvas id="glitch-shader"></canvas>
+    <canvas id="glitch-shader" width="1440" height="900"></canvas>
     <script async type="module">
       const startTime = Date.now();
       const canvas = document.getElementById("glitch-shader");
