--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -43,9 +43,7 @@
         def.play(startTime);
         //console.log(width + " " + height);
       }
-      canvas.onload = function() {
-        if (canvas.width !== width || canvas.height !== height) changeCanvasSize();
-      }
+      canvas.onload = changeCanvasSize();
       window.onresize = changeCanvasSize;
     </script>
   </body>
