--- a/tests/scatter/index.html
+++ b/tests/scatter/index.html
@@ -2,32 +2,65 @@
 <html>
   <head>
     <title>Spax's Scatter Shader</title>
-  </head>
-  <body style="background-color: black;">
-    <canvas
-      id="scatter-shader"
-      width="1440px"
-      height="1080px"
-      style="
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+      body {
+        background-color: black;
+        overscroll-behavior: none;
+        display: grid;
+      }
+      canvas {
         width: 100%;
-        max-width: 720px;
+        height: 100%;
+      }
+      p {
+        color: white;
         position: absolute;
+        font: arial;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-      "
-    ></canvas>
+        user-select: none;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="scatter-shader" width="0" height="0"></canvas>
+    <p id="click-prompt">Click anywhere to start playing</p>
     <script async type="module">
       import { SimpleShader as Shader } from "/js/simple-shader.js";
-      import * as frags from "/tests/frags.glsl.js";
-      const def = new Shader("scatter-shader", {
-        frag: frags.scatter,
-        sampler2D: {
-          sampler0: "/videos/virtual_insanity.mp4"
+      const canvas = document.getElementById("scatter-shader");
+      const prompt = document.getElementById("click-prompt");
+      let width = window.innerWidth;
+      let height = window.innerHeight;
+      function changeCanvasSize() {
+        width = window.innerWidth;
+        height = window.innerHeight;
+        canvas.width = width;
+        canvas.height = height;
+      }
+      canvas.onload = changeCanvasSize();
+      window.onresize = changeCanvasSize;
+      let clicked = false;
+      document.onclick = function() {
+        if (!clicked) {
+          clicked = true;
+          const def = new Shader("scatter-shader", {
+            frag: "scatter.frag",
+            muted: false,
+            loop: false,
+            sampler2D: {
+              sampler0: "/videos/virtual_insanity.mp4"
+            }
+          });
+          def.play();
+          prompt.style.display = "none";
+          //console.log("clicked! ");
         }
-      });
-      def.play();
+      }
     </script>
-    <!--<a href="/tests/frags.glsl.js">-->
   </body>
 </html>
