--- a/tests/glitch/index.html
+++ b/tests/glitch/index.html
@@ -21,19 +21,15 @@
   <body>
     <canvas id="glitch-shader" width="0" height="0"></canvas>
     <script async type="module">
-      const canvas = document.getElementById("glitch-shader");
       import { SimpleShader as Shader } from "./js/simple-shader.js";
+      const canvas = document.getElementById("glitch-shader");
       const def = new Shader("simple-shader", {
-        frag: "/glitch.frag"
+        frag: "./glitch.frag"
       });
       def.play();
-      let width = window.innerWidth;
-      let height = window.innerHeight;
       function changeCanvasSize() {
-        width = window.innerWidth;
-        height = window.innerHeight;
-        canvas.width = width;
-        canvas.height = height;
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
       }
       canvas.onload = changeCanvasSize();
       window.onresize = changeCanvasSize;
