--- a/tests/scatter/index.html
+++ b/tests/scatter/index.html
@@ -15,6 +15,8 @@
       canvas {
         width: 100%;
         height: 100%;
+        image-rendering: pixelated;
+        display: none;
       }
       p {
         color: white;
@@ -31,34 +33,31 @@
     <canvas id="scatter-shader" width="0" height="0"></canvas>
     <p id="click-prompt">Click anywhere to start playing</p>
     <script async type="module">
-      import { SimpleShader as Shader } from "/js/simple-shader.js";
+      import { SimpleShader as Shader } from "../../js/simple-shader.js";
       const canvas = document.getElementById("scatter-shader");
       const prompt = document.getElementById("click-prompt");
-      let width = window.innerWidth;
-      let height = window.innerHeight;
       function changeCanvasSize() {
-        width = window.innerWidth;
-        height = window.innerHeight;
-        canvas.width = width;
-        canvas.height = height;
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
       }
       canvas.onload = changeCanvasSize();
       window.onresize = changeCanvasSize;
+      const def = new Shader("scatter-shader", {
+        frag: "./scatter.frag",
+        precision: "high",
+        muted: false,
+        loop: false,
+        sampler2D: {
+          sampler0: "../../videos/virtual_insanity.mp4"
+        }
+      });
       let clicked = false;
       document.onclick = function() {
         if (!clicked) {
           clicked = true;
-          const def = new Shader("scatter-shader", {
-            frag: "scatter.frag",
-            muted: false,
-            loop: false,
-            sampler2D: {
-              sampler0: "/videos/virtual_insanity.mp4"
-            }
-          });
           def.play();
           prompt.style.display = "none";
-          //console.log("clicked! ");
+          canvas.style.display = "inherit";
         }
       }
     </script>
