whoops forgot to loop it

--- a/tests/scatter/index.html
+++ b/tests/scatter/index.html
@@ -46,7 +46,7 @@
         frag: "./scatter.frag",
         precision: "high",
         muted: false,
-        loop: false,
+        loop: true,
         sampler2D: {
           sampler0: "../../videos/virtual_insanity.mp4"
         }
