playinline is dumb for mobile

--- a/tests/scatter/index.html
+++ b/tests/scatter/index.html
@@ -47,6 +47,7 @@
         precision: "high",
         muted: false,
         loop: true,
+        playInline: false,
         sampler2D: {
           sampler0: "../../videos/virtual_insanity.mp4"
         }
