--- a/tests/scatter/index.html
+++ b/tests/scatter/index.html
@@ -12,55 +12,79 @@
         overscroll-behavior: none;
         display: grid;
       }
-      canvas {
+      #scatter-shader {
         width: 100%;
         height: 100%;
-        image-rendering: pixelated;
-        display: none;
-      }
-      p {
-        color: white;
         position: absolute;
-        font: arial;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+      }
+      #click-prompt {
+        color: white;
+        font: arial;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
         user-select: none;
       }
     </style>
   </head>
   <body>
     <canvas id="scatter-shader" width="0" height="0"></canvas>
-    <p id="click-prompt">Click anywhere to start playing</p>
+    <p id="click-prompt">Click anywhere to play</p>
     <script async type="module">
       import { SimpleShader as Shader } from "../../js/simple-shader.js";
       const canvas = document.getElementById("scatter-shader");
       const prompt = document.getElementById("click-prompt");
       function changeCanvasSize() {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+        width = window.innerWidth*2;
+        height = window.innerHeight*2;
+        canvas.width = width;
+        canvas.height = height;
       }
-      canvas.onload = changeCanvasSize();
+      canvas.onload = changeCanvasSize;
       window.onresize = changeCanvasSize;
-      const def = new Shader("scatter-shader", {
-        frag: "./scatter.frag",
-        precision: "high",
-        muted: false,
-        loop: true,
-        playInline: false,
-        sampler2D: {
-          sampler0: "../../videos/virtual_insanity.mp4"
-        }
+      const s = new Shader("scatter-shader", {
+        frags: [
+          "./scatter.frag"
+        ],
+        uniforms: [{
+          sampler2D: {
+            sampler0: {
+              path: "../../videos/virtual_insanity.mp4",
+              muted: false,
+              loop: true
+            }
+          }
+        }]
       });
       let clicked = false;
-      document.onclick = function() {
+      window.onclick = event => {
         if (!clicked) {
           clicked = true;
-          def.play();
           prompt.style.display = "none";
-          canvas.style.display = "inherit";
+          s.play();
         }
       }
+      /*TODO: add a working toggle
+      let toggled = true;
+      document.body.onkeydown = function(e) {
+        if (!clicked && (e.key === " " ||
+            e.code === "Space" ||
+            e.keyCode === 32
+        )) {
+          if (toggled) {
+            toggled = false;
+            //def.stop();
+          } else {
+            toggled = true;
+            //def.play();
+          }
+        }
+      }*/
     </script>
   </body>
 </html>
