--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link rel="preload" href="/data/fanart.json" as="fetch" crossorigin="anonymous">
-    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
-    <meta property="og:title" content="Spax Fanart">
-    <meta property="og:description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
+    <meta property="og:title" content="All Spax DEP Face Sprites">
+    <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
@@ -17,8 +14,8 @@
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/art"/>
-    <title>Spax Fanart</title>
+    <link rel="canonical" href="https://spiritaxolotl.github.io/html/allspaxfaces"/>
+    <title>Nahua &quot;Ref&quot; Sheet</title>
   </head>
   <body>
     <div id="bg">
@@ -27,7 +24,7 @@
             <img src="
           /images/faces/spax/Smirk.png
             "></img>
-          Yo! This page hosts all the fanart that you guys made of my characters!
+          Hey! Here's my character &quot;Nahua&quot;!
         </div>
       </div>
       <div class="text-box flex-container unselectable">
@@ -35,7 +32,7 @@
             <img src="
           /images/faces/spax/Look.png
             "></img>
-          (And just art of my characters in general.)
+          No real ref sheet yet...
         </div>
       </div>
       <div class="text-box flex-container unselectable">
@@ -43,22 +40,10 @@
             <img src="
           /images/faces/spax/Smirk.png
             "></img>
-          Here's the character information:<br>
-        The blue anthro axolotl gal is my work-in-progress OC, Nahua!<br>
-        And the small blue normal axolotl is Spax, a representation of me as a person on the internet.
+          Until then, here are a collection of separate reference images:
         </div>
       </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Blush.png
-            "></img>
-          Well, I hope you enjoy the art!
-        </div>
-      </div>
-    </div>
-    <script src="/js/debugging.js"></script>
-    <script src="/js/art.js"></script>
-    <script src="/js/scrollparallax.js"></script>
+      
+    <script src="/js/scrollparallax.js" type=text/javascript></script>
   </body>
 </html>
