nahua ref sheet site done

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -58,7 +58,7 @@
       </div>
     </div>
     <script src="/js/debugging.js"></script>
-    <script src="/js/art.js"></script>
+    <script src="/js/fanart.js"></script>
     <script src="/js/scrollparallax.js"></script>
   </body>
 </html>
