--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -43,7 +43,27 @@
           Until then, here are a collection of separate reference images:
         </div>
       </div>
-      
+      <!--This is where fanart.js inserts stuff-->
+      <div class="text-box flex-container unselectable end-of-fanart">
+        <div>
+          Other notes not described on the ref images:<br>
+          1. Nahua is female. She goes by she/her pronouns, and is aromantic.<br>
+          2. Nahua is <u>FLAT</u>.<br>
+          3. If it wasn't obvious, she's an <a href="https://en.wikipedia.org/wiki/Axolotl">axolotl</a>.<br>
+          4. She's 19 years old.
+        </div>
+      </div>
+      <div class="text-box flex-container unselectable end-of-fanart">
+        <div>
+          Final clarifications:<br>
+          1. The finned part of her tail goes along her spine, as seen in the valentine's day image.<br>
+          2. She has four fingers, not three.<br>
+          3. She has a full head of hair. She isn't mostly bald like early art depicts her as.<br>
+          4. Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills">rami</a>) are stylized like that.<br>
+          5. Her headphones are optional? I guess? She'll just look weird without them.
+        </div>
+      </div>
+    <script src="/js/fanart.js"></script>
     <script src="/js/scrollparallax.js" type=text/javascript></script>
   </body>
 </html>
