--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="All Spax DEP Face Sprites">
-    <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
+    <meta property="og:title" content="Nahua &quot;Ref&quot; Sheet">
+    <meta property="og:description" content="A collection of refs for Nahua!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
@@ -14,7 +14,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/allspaxfaces"/>
+    <link rel="canonical" href="https://spiritaxolotl.github.io/html/nahua-ref-sheet"/>
     <title>Nahua &quot;Ref&quot; Sheet</title>
   </head>
   <body>
