--- a/html/fanart.html
+++ b/html/fanart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="manifest">
   <head>
     <link rel="preload" href="/data/fanart.json" as="fetch" crossorigin="anonymous">
     
