--- a/html/main.html
+++ b/html/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="manifest">
   <head>
     <link rel="preload" href="https://calmbubbles.github.io/zerasGift/img/gift.png" as="image">
     
