--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -8,7 +8,7 @@ haha now it's edited by spax:)
 -->
 
 <!DOCTYPE HTML>
-<html>
+<html manifest="manifest">
   <head>
     <link rel="preload" href="/images/faces/claire/Neutral.png" as="image">
     <link rel="preload" href="/images/faces/claire/Happy.png" as="image">
